<resources>
    <string name="app_name">Yummisto</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_txt">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account_today">Create your account today!</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="re_enter_the_password">Re-enter the Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
</resources>