<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/mainbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="200dp"
            android:text="@string/app_name"
            android:textColor="@color/mainheda"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
android:textColor="@color/headcolor"
            android:text="@string/create_your_account_today"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolors"
            android:textColor="@color/textcolors"
            android:hint="@string/enter_your_first_name"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:inputType="textPersonName"
            android:id="@+id/editFirstNameSignup"
            />
        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/textcolors"
            android:textColor="@color/textcolors"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:inputType="textPersonName"
            android:id="@+id/editLastNameSignup"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolors"
            android:textColor="@color/textcolors"
            android:hint="@string/enter_your_email"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:inputType="textEmailAddress"
            android:id="@+id/editEmailSignup"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/textcolors"
            android:textColor="@color/textcolors"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:id="@+id/editPasswordSignup"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_the_password"
            android:textColorHint="@color/textcolors"
            android:textColor="@color/textcolors"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:id="@+id/editPasswordSignupAgain"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_account"
            android:id="@+id/btnCreateAccount"
            android:backgroundTint="@color/userbtn"/>

    </LinearLayout>

</RelativeLayout>