<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="80dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="80dp"
            android:text="@string/app_name"
            android:textColor="@color/textcolors"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/textcolors"
            android:layout_marginTop="12dp"
            android:inputType="textEmailAddress"
            android:id="@+id/editEmailLogin"
            android:textColor="@color/textcolors"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textcolors"
            android:hint="@string/enter_your_password"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:id="@+id/editPasswordLogin"
            android:textColor="@color/textcolors"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_txt"
            android:id="@+id/btnLogin"
            android:backgroundTint="@color/userbtn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:backgroundTint="@color/userbtn"/>
    </LinearLayout>

</RelativeLayout>